--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="update">
-        <h1 class="white">What is NeXT? </h1>
-        <img id="viewpoint" src="nxtsoon.png" alt="901Z" width="25%">
+        <h1 class="white">tripleS NXT (?)</h1>
+        <img id="viewpoint" src="nxtsoon.png" alt="901Z" width="30%">
         
     </div>
 </body>
