--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAV</title>
+    <title>WAV Objekt</title>
     <link rel="stylesheet" href="mainstyles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <img src="wav.png" alt="">
