--- a/public/server.html
+++ b/public/server.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAV</title>
+    <title id="objekt"></title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <script src="information.js"></script>
 </head>
 <body>
     <div>
-        <h1><img src="wav.png" alt=""></h1>
-        <img id="viewpoint" src="fan-objekt/zf_{{objektId}}.png" alt="901Z" width="30%" onclick=flip()>
+        <a href="index.html"><h1><img src="wav.png" alt=""></h1></a>
+        <img id="viewpoint" src="fan-objekt/zf_{{objektId}}.png" alt="901Z" width="30%" style="cursor: pointer;" onclick=flip()>
     </div>
     <div id="description">
         <div id="descrip" class="rounded-rectangle white">1</div>
