--- a/public/server.html
+++ b/public/server.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <a href="index.html"><h1><img src="wav.png" alt=""></h1></a>
-        <img id="viewpoint" src="fan-objekt/zf_{{objektId}}.png" alt="901Z" width="30%" style="cursor: pointer;" onclick=flip()>
+        <img id="viewpoint" src="objekt-front-page/{{objektId}}.png" alt="901Z" width="30%" style="cursor: pointer;" onclick=flip()>
     </div>
     <div id="description">
         <div id="descrip" class="rounded-rectangle white">1</div>
