--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,15 @@
         </form>
     </div>
 
-    <div class="update">
-        <h1 class="white">tripleS NXT (?)</h1>
+    <div class="update" style="background-color: rgb(46, 46, 46);">
+        <h1 class="white">NXTeaser Drop</h1>
+        <video width="64%" height="36%" controls>
+            <source src="teaserdrop-nxt.mp4" type="video/mp4">
+        
+    </div>
+
+    <div class="update" style="background-color: #002060;">
+        <h1 class="white ">tripleS NXT (?)</h1>
         <img id="viewpoint" src="nxtsoon.png" alt="901Z" width="30%">
         
     </div>
