--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="update" style="background-color: rgb(46, 46, 46);">
-        <h1 class="white">NXTeaser Drop</h1>
+        <h1 class="white">teaser Drop</h1>
         <video width="64%" height="36%" controls>
             <source src="teaserdrop-nxt.mp4" type="video/mp4">
         
