--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
         </form>
     </div>
 
-    <!-- <div class="update" style="background-color: rgb(46, 46, 46);">
+    <div class="update" style="background-color: rgb(46, 46, 46);">
         <h1 class="white">teaser drop</h1>
-        <video width="64%" height="36%" controls>
-            <source src="teaserdrop-nxt.mp4" type="video/mp4">
+        <video width="48%" height="27%" controls>
+            <source src="teaserdrop-nxt-web.mp4" type="video/mp4">
         
-    </div> -->
+    </div>
 
     <div class="update" style="background-color: #002060;">
         <h1 class="white ">tripleS NXT (?)</h1>
