--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,34 @@
         </form>
     </div>
 
+    <div id="recently">
+        <div id="S01"></div>
+        <div id="S02"></div>
+        <div id="S03"></div>
+        <div id="S04"></div>
+        <div id="S05"><img src="objekt-front-page/e5va9zh2sd6wd6wg3td6wd6we5vd6w.png" alt="S05" width="10%"></div>
+        <div id="S06"></div>
+        <div id="S07"><img src="objekt-front-page/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x.png" alt="S07" width="10%"></div>
+        <div id="S08"></div>
+        <div id="S09"><img src="objekt-front-page/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x.png" alt="S09" width="10%"></div>
+        <div id="S10"><img src="objekt-front-page/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y.png" alt="S10" width="10%"></div>
+        <div id="S11"></div>
+        <div id="S12"></div>
+        <div id="S13"></div>
+        <div id="S14"></div>
+        <div id="S15"></div>
+        <div id="S16"></div>
+        <div id="S17"></div>
+        <div id="S18"></div>
+        <div id="S19"></div>
+        <div id="S20"></div>
+        <div id="S21"></div>
+        <div id="S22"></div>
+        <div id="S23"></div>
+        <div id="S24"></div>
+        <h1>다른 오브젝트도 보러가기</h1>
+    </div>
+
     <div id="teaser">
         <div class="update" style="background-color: rgb(19, 19, 19); text-align: center;">
             <h1 class="white">teaser drop</h1>
