--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
             <div id="S05"><img src="objekt-front-page/e5va9zh2sd6wd6wg3td6wd6we5vd6w.png" alt="S05"></div>
             <div id="S06"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S07"><img src="objekt-front-page/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x.png" alt="S07"></div>
-            <div id="S08"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S08"><img src="objekt-front-page/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x.png" alt="S08"></div>
             <div id="S09"><img src="objekt-front-page/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x.png" alt="S09"></div>
             <div id="S10"><img src="objekt-front-page/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y.png" alt="S10"></div>
             <div id="S11"><img src="objekt-front-page/e5vd6wa9zd6wd6wi1rd6wi1rg3tb8y.png" alt="S11"></div>
