--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,12 @@
             <button type="submit" class="search-button">🔎</button>
         </form>
 
-        <a href="#teaser" class="white">teaser</a><br>
-        <a href="#recently-title" class="white">objekt</a><br>
-        <p class="white">버전 : 1.1.9</p>
+        <a href="#teaser" class="white center_display" style="font-size: 30px;">
+            <img src="main-page-source/button2.png" width="40px"> teaser 보러가기</a>
+            <br>
+        <a href="#recently-title" class="white center_display" style="font-size: 30px; margin-top: -20px;">
+            <img src="main-page-source/button1.png" width="40px"> objekt 보러가기</a><br>
+        <p class="white">버전 : 1.2.0</p>
     </div>
 
     
@@ -56,17 +59,37 @@
             <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
-            <div id="S05"><img src="objekt-front-page/e5va9zh2sd6wd6wg3td6wd6we5vd6w.png" alt="S05"></div>
+
+            <div id="S05"><a href="https://wav-view.netlify.app/e5va9zh2sd6wd6wg3td6wd6we5vd6w">
+                <img src="objekt-front-page/e5va9zh2sd6wd6wg3td6wd6we5vd6w.png" alt="S05"></a></div>
+
             <div id="S06"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
-            <div id="S07"><img src="objekt-front-page/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x.png" alt="S07"></div>
-            <div id="S08"><img src="objekt-front-page/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x.png" alt="S08"></div>
-            <div id="S09"><img src="objekt-front-page/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x.png" alt="S09"></div>
-            <div id="S10"><img src="objekt-front-page/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y.png" alt="S10"></div>
-            <div id="S11"><img src="objekt-front-page/e5vd6wa9zd6wd6wi1rd6wi1rg3tb8y.png" alt="S11"></div>
+
+            <div id="S07"><a href="https://wav-view.netlify.app/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x">
+                <img src="objekt-front-page/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x.png" alt="S07"></a></div>
+
+            <div id="S08"><a href="https://wav-view.netlify.app/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x">
+                <img src="objekt-front-page/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x.png" alt="S08"></a></div>
+
+            <div id="S09"><a href="https://wav-view.netlify.app/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x">
+                <img src="objekt-front-page/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x.png" alt="S09"></a></div>
+
+            <div id="S10"><a href="https://wav-view.netlify.app/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y">
+                <img src="objekt-front-page/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y.png" alt="S10"></a></div>
+
+            <div id="S11"><a href="https://wav-view.netlify.app/e5vd6wa9zd6wd6wi1rd6wi1rg3tb8y">
+                <img src="objekt-front-page/e5vd6wa9zd6wd6wi1rd6wi1rg3tb8y.png" alt="S11"></a></div>
+
             <div id="S12"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
-            <div id="S13"><img src="objekt-front-page/e5vd6wi1ra9zd6wj0qa9zh2sd6wa9z.png" alt="S13"></div>
+
+            <div id="S13"><a href="https://wav-view.netlify.app/e5vd6wi1ra9zd6wj0qa9zh2sd6wa9z">
+                <img src="objekt-front-page/e5vd6wi1ra9zd6wj0qa9zh2sd6wa9z.png" alt="S13"></a></div>
+
             <div id="S14"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
-            <div id="S15"><img src="objekt-front-page/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q.png" alt="S15"></div>
+
+            <div id="S15"><a href="https://wav-view.netlify.app/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q">
+                <img src="objekt-front-page/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q.png" alt="S15"></a></div>
+
             <div id="S16"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S17"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S18"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
@@ -77,7 +100,7 @@
             <div id="S23"></div>
             <div id="S24"></div>
         </div>
-        <h1 class="white">다른 오브젝트도 보러가기</h1>
+        <a href="/objekt-view"><h1 class="white">다른 오브젝트도 보러가기</h1></a>
         <p class="white" style="font-family: 'Pretendard-Regular';">문의</p>
         <p class="white" style="font-family: 'Pretendard-Regular';">네이버 : codja2050@naver.com</p>
         <p class="white" style="font-family: 'Pretendard-Regular';">디스코드 : gsugar</p>
