--- a/public/index.html
+++ b/public/index.html
@@ -49,16 +49,16 @@
             </div>
         </div>
 
-        <div class="update" style="background-color: #002060;">
+        <div class="update" style="background-color: rgb(0, 10, 100);">
             <h1 class="white ">tripleS NXT (?)</h1>
-            <img id="viewpoint" src="nxtsoon.png" alt="901Z" width="30%">
+            <img id="viewpoint" class="mb-pc" src="nxtsoon.png" alt="904Z" width="30%">
             
         </div>
     </div>
 
     <div id="recently-title" class="margin-control" style="margin-top: 15vw">
         <a href="#main"><h1 class="white">최근 공개된 가상 오브젝트</h1></a>
-        <div id="recently">
+        <div class="objekt_grid">
             <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
             <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
