--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -5,14 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="objekt"></title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mainstyles.css">
     <script src="information.js"></script>
 </head>
 <body>
     <div>
-        <a href="index.html"><h1><img src="wav.png" alt=""></h1></a>
+        <a href="index.html"><h1><img src="wav.png" alt="" id="main"></h1></a>
         <img src="main-page-source/warning.png" alt="" width="15%">
         <p class="white">준비 중입니다!</p>
+        <p class="white">
+            완료 사항<br>
+            1. 2024년 맞이 오브젝트 사진 업로드
+            <br><br>
+            미완료 사항<br>
+            1. 오브젝트 설명
+        </p>
+    </div>
+
+    <div id="Special" class="margin-control" style="margin-top: 15vw">
+        <a href="#main"><h1 class="white">904Z / 905Z</h1></a>
+        <div class="objekt_grid">
+            <!-- <div id="S17"><a href="https://wav-view.netlify.app/#teaser">
+                <img src="main-page-source/nxtsoon_S17.png" alt="S17_NXT"></a></div>
+            <div id="S20"><a href="https://wav-view.netlify.app/#teaser">
+                <img src="main-page-source/nxtsoon_S173.png" alt="S20_NXT"></a></div> -->
+            <div id="S01"> <img src="main-page-source/nxtsoon1.png" alt="최근 옵젝이 없어요"> </div>
+            <div id="S02"><img src="main-page-source/nxtsoon2.png" alt="최근 옵젝이 없어요"></div>
+        </div>
+    </div>
+
+    <div id="Special" class="margin-control" style="margin-top: 15vw">
+        <a href="#main"><h1 class="white">스페셜 가상 오브젝트 902Z</h1></a>
+        <div class="objekt_grid">
+            <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
+            <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+        </div>
+    </div>
+
+    <div id="2024WAV" class="margin-control" style="margin-top: 15vw">
+        <a href="#main"><h1 class="white">2024년 신년 맞이 901Z</h1></a>
+        <div class="objekt_grid">
+            <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
+            <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+
+            <div id="S05"><a href="https://wav-view.netlify.app/e5va9zh2sd6wd6wg3td6wd6we5vd6w">
+                <img src="objekt-front-page/e5va9zh2sd6wd6wg3td6wd6we5vd6w.png" alt="S05"></a></div>
+
+            <div id="S06"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+
+            <div id="S07"><a href="https://wav-view.netlify.app/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x">
+                <img src="objekt-front-page/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x.png" alt="S07"></a></div>
+
+            <div id="S08"><a href="https://wav-view.netlify.app/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x">
+                <img src="objekt-front-page/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x.png" alt="S08"></a></div>
+
+            <div id="S09"><a href="https://wav-view.netlify.app/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x">
+                <img src="objekt-front-page/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x.png" alt="S09"></a></div>
+
+            <div id="S10"><a href="https://wav-view.netlify.app/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y">
+                <img src="objekt-front-page/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y.png" alt="S10"></a></div>
+
+            <div id="S11"><a href="https://wav-view.netlify.app/e5vd6wa9zd6wd6wi1rd6wi1rg3tb8y">
+                <img src="objekt-front-page/e5vd6wa9zd6wd6wi1rd6wi1rg3tb8y.png" alt="S11"></a></div>
+
+            <div id="S12"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+
+            <div id="S13"><a href="https://wav-view.netlify.app/e5vd6wi1ra9zd6wj0qa9zh2sd6wa9z">
+                <img src="objekt-front-page/e5vd6wi1ra9zd6wj0qa9zh2sd6wa9z.png" alt="S13"></a></div>
+
+            <div id="S14"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+
+            <div id="S15"><a href="https://wav-view.netlify.app/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q">
+                <img src="objekt-front-page/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q.png" alt="S15"></a></div>
+
+            <div id="S16">
+                <img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+        </div>
     </div>
 </body>
 </html>
