--- a/public/server.html
+++ b/public/server.html
@@ -13,6 +13,9 @@
         <a href="index.html"><h1><img src="wav.png" alt=""></h1></a>
         <img id="viewpoint" src="objekt-front-page/{{objektId}}.png" alt="901Z" width="30%" style="cursor: pointer;" onclick=flip()>
     </div>
+    <div>
+        <button onclick="downloadImage()">Download</button>
+    </div>
     <div id="description">
         <div id="descrip" class="rounded-rectangle white">1</div>
         <div id="number" class="rounded-rectangle white">2</div>
