--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,8 @@
     <div id="recently-title" class="margin-control" style="margin-top: 15vw">
         <a href="#main"><h1 class="white">최근 공개된 가상 오브젝트</h1></a>
         <div class="objekt_grid">
-            <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
+            <div id="S01"><a href="https://wav-view.netlify.app/marshmallowyoonseoyeon20240111">
+                <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="S01"></a></div>
             <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
