--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -37,9 +37,10 @@
     <div id="Special" class="margin-control" style="margin-top: 15vw">
         <a href="#main"><h1 class="white">스페셜 가상 오브젝트 902Z</h1></a>
         <div class="objekt_grid">
-            <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
+            <div id="S01"> <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="윤서연_마쉬멜로우1"> </div>
             <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="NXT"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
         </div>
     </div>
 
