--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -20px;">
             <img src="main-page-source/button3.png" width="40px"> 모든 가상 objekt</a>
             <br>
-        <p class="white">버전 : 1.2.0</p>
+        <p class="white">버전 : 1.2.marshmallow</p>
     </div>
 
     
