--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -15,14 +15,15 @@
         <p class="white">준비 중입니다!</p>
         <p class="white">
             완료 사항<br>
-            1. 2024년 맞이 오브젝트 사진 업로드
+            1. 2024년 맞이 오브젝트 사진 업로드<br>
+            2. 스페셜 가상 오브젝트 사진 업로드
             <br><br>
             미완료 사항<br>
             1. 오브젝트 설명
         </p>
     </div>
 
-    <div id="Special" class="margin-control" style="margin-top: 15vw">
+    <div id="2024_904905" class="margin-control" style="margin-top: 15vw">
         <a href="#main"><h1 class="white">904Z / 905Z</h1></a>
         <div class="objekt_grid">
             <!-- <div id="S17"><a href="https://wav-view.netlify.app/#teaser">
@@ -35,10 +36,11 @@
     </div>
 
     <div id="Special" class="margin-control" style="margin-top: 15vw">
-        <a href="#main"><h1 class="white">스페셜 가상 오브젝트 902Z</h1></a>
+        <a href="#main"><h1 class="white">스페셜 가상 오브젝트</h1></a>
         <div class="objekt_grid">
-            <div id="S01"> <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="윤서연_마쉬멜로우1"> </div>
-            <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S01"><a href="https://wav-view.netlify.app/marshmallowyoonseoyeon20240111">
+                <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="윤서연_마쉬멜로우1"></a></div>
+            <div id="S02"><img src="main-page-source/mmysy903.png" alt="윤서연_마쉬멜로우2"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="NXT"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
         </div>
