--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <a href="index.html"><h1><img src="wav.png" alt="" id="main"></h1></a>
-        <img src="main-page-source/warning.png" alt="" width="15%">
+        <img src="main-page-source/warning.png" alt="" width="15%" class="mb-pc">
         <p class="white">준비 중입니다!</p>
         <p class="white">
             완료 사항<br>
@@ -19,8 +19,47 @@
             2. 스페셜 가상 오브젝트 사진 업로드
             <br><br>
             미완료 사항<br>
-            1. 오브젝트 설명
+            1. 오브젝트 목록
         </p>
+        <!-- <div class="list_container">
+            <ul style="list-style-type: none;">
+                <li class="white" style="font-size: 35px;">1. 팬 에디션 오브젝트<ul style="list-style-type: none;">
+                    <li class="green">
+                        <a href="#2024WAV" class="green on_your_left">1. 901Z : 2024년 신년 맞이 오브젝트 (S01 ~ S16)</a>
+                    </li>
+                </li></ul><br>
+
+                <li class="white" style="font-size: 35px;">2. 스페셜 가상 오브젝트<ul style="list-style-type: none;">
+                    <li class="green">1. 902Z / 903Z</li>
+                </li></ul><br>
+
+                <li class="white" style="font-size: 35px;">3. 더블 가상 오브젝트<ul style="list-style-type: none;">
+                    <li class="green">1. 908Z / 909Z / 910Z (업데이트 예정)</li>
+                </li></ul><br>
+
+                <li class="white" style="font-size: 35px;">4. 유닛 오브젝트<ul style="list-style-type: none;">
+                    <li class="green">1. 904Z / 905Z (NXT 업데이트 예정)</li>
+                </li></ul>
+            </ul>
+        
+        </div>
+    </div>
+
+    <div id="Double" class="margin-control" style="margin-top: 15vw">
+        <a href="#main"><h1 class="white">더블 가상 오브젝트</h1></a>
+
+        <div>
+            <h2 class="white">--- 908Z / 909Z / 910Z ---</h2>
+            <div id="2024_908Z" class="objekt_grid">
+                <div id="S17"><a href="https://wav-view.netlify.app/#teaser">
+                    <img src="main-page-source/nxtsoon_S17.png" alt="S17_NXT"></a></div>
+                <div id="S20"><a href="https://wav-view.netlify.app/#teaser">
+                    <img src="main-page-source/nxtsoon_S173.png" alt="S20_NXT"></a></div> 
+                <div id="S09"> <img src="main-page-source/bnzked908.png" alt="최근 옵젝이 없어요"> </div>
+                <div id="S15"><img src="main-page-source/bnzked908.png" alt="최근 옵젝이 없어요"></div>
+            </div>
+        </div>-->
+
     </div>
 
     <div id="2024_904905" class="margin-control" style="margin-top: 15vw">
@@ -47,7 +86,8 @@
     </div>
 
     <div id="2024WAV" class="margin-control" style="margin-top: 15vw">
-        <a href="#main"><h1 class="white">2024년 신년 맞이 901Z</h1></a>
+        <a href="#main"><h1 class="white">팬 에디션 오브젝트</h1></a>
+        <h2 class="white">--- 901Z ---</h2>
         <div class="objekt_grid">
             <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
             <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
