--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -43,7 +43,7 @@
             </ul>
         
         </div>
-    </div>
+    </div>-->
 
     <div id="Double" class="margin-control" style="margin-top: 15vw">
         <a href="#main"><h1 class="white">더블 가상 오브젝트</h1></a>
@@ -51,14 +51,17 @@
         <div>
             <h2 class="white">--- 908Z / 909Z / 910Z ---</h2>
             <div id="2024_908Z" class="objekt_grid">
-                <div id="S17"><a href="https://wav-view.netlify.app/#teaser">
-                    <img src="main-page-source/nxtsoon_S17.png" alt="S17_NXT"></a></div>
-                <div id="S20"><a href="https://wav-view.netlify.app/#teaser">
-                    <img src="main-page-source/nxtsoon_S173.png" alt="S20_NXT"></a></div> 
-                <div id="S09"> <img src="main-page-source/bnzked908.png" alt="최근 옵젝이 없어요"> </div>
-                <div id="S15"><img src="main-page-source/bnzked908.png" alt="최근 옵젝이 없어요"></div>
+                <div id="S09"><a href="https://wav-view.netlify.app/bunnykaede231203lovelutionsign">
+                    <img src="objekt-front-page/bunnykaede231203lovelutionsign.png" alt="S09"></a></div>
+                <div id="S15"><a href="https://wav-view.netlify.app/burger1116lovelutionsignS15908">
+                    <img src="objekt-front-page/burger1116lovelutionsignS15908.png" alt="S15"></a></div> 
+                <div id="S09"><a href="https://wav-view.netlify.app/ilovekaede20231203cuteS09noway">
+                    <img src="objekt-front-page/ilovekaede20231203cuteS09noway.png" alt="S09"></a></div> 
+                <div id="S15"><a href="https://wav-view.netlify.app/welovexinyu20231116cuteS15Dove">
+                    <img src="objekt-front-page/welovexinyu20231116cuteS15Dove.png" alt="S15"></a></div> 
+                <div id="S15"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             </div>
-        </div>-->
+        </div>
 
     </div>
 
@@ -80,8 +83,8 @@
             <div id="S01"><a href="https://wav-view.netlify.app/marshmallowyoonseoyeon20240111">
                 <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="윤서연_마쉬멜로우1"></a></div>
             <div id="S02"><img src="main-page-source/mmysy903.png" alt="윤서연_마쉬멜로우2"></div>
+            <div id="S02"><img src="main-page-source/S09S152024902.png" alt="S09S152024902"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
-            <div id="NXT"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
         </div>
     </div>
 
