--- a/public/server.html
+++ b/public/server.html
@@ -15,6 +15,8 @@
     </div>
     <div>
         <button onclick="downloadImage()">Download</button>
+        <button onclick="flip()"> flip 뒤집기 </button>
+        <a href="index.html"><button> main 메인화면 </button></a>
     </div>
     <div id="description">
         <div id="descrip" class="rounded-rectangle white">1</div>
