--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -20px;">
             <img src="main-page-source/button3.png" width="40px"> 모든 가상 objekt</a>
             <br>
-        <p class="white">버전 : 1.2.marshmallow</p>
+        <p class="white">버전 : 1.2.love</p>
     </div>
 
     
@@ -76,8 +76,8 @@
             <div id="S08"><a href="https://wav-view.netlify.app/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x">
                 <img src="objekt-front-page/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x.png" alt="S08"></a></div>
 
-            <div id="S09"><a href="https://wav-view.netlify.app/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x">
-                <img src="objekt-front-page/e5vc7xc7xg3td6wh2sg3tj0qj0qc7x.png" alt="S09"></a></div>
+            <div id="S09"><a href="https://wav-view.netlify.app/bunnykaede231203lovelutionsign">
+                <img src="objekt-front-page/bunnykaede231203lovelutionsign.png" alt="S09"></a></div>
 
             <div id="S10"><a href="https://wav-view.netlify.app/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y">
                 <img src="objekt-front-page/e5vc7xg3tf4ud6wi1ra9ze5vh2sb8y.png" alt="S10"></a></div>
@@ -92,8 +92,8 @@
 
             <div id="S14"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
 
-            <div id="S15"><a href="https://wav-view.netlify.app/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q">
-                <img src="objekt-front-page/e5ve5vf4uh2sd6wj0qh2sf4uj0qj0q.png" alt="S15"></a></div>
+            <div id="S15"><a href="https://wav-view.netlify.app/burger1116lovelutionsignS15908">
+                <img src="objekt-front-page/burger1116lovelutionsignS15908.png" alt="S15"></a></div>
 
             <div id="S16">
                 <img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
