--- a/public/server.html
+++ b/public/server.html
@@ -7,7 +7,28 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <script src="information.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyCbg4hzNgHuHLPPf-p81tOR9NokHUkJEYU",
+            authDomain: "wav-page.firebaseapp.com",
+            projectId: "wav-page",
+            storageBucket: "wav-page.appspot.com",
+            messagingSenderId: "177402832992",
+            appId: "1:177402832992:web:f9e73201becffd901cfb05",
+            measurementId: "G-7LRKNDFK7B"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+
+        // Initialize Cloud Firestore and get a reference to the service
+        const DB = firebase.firestore();
+    </script>
 </head>
+
+
 <body>
     <div>
         <a href="index.html"><h1><img src="wav.png" alt=""></h1></a>
@@ -27,9 +48,13 @@
     </div>
 </body>
     <script>
-        // 페이지 로드 시 자동으로 호출되도록 설정
+
+        var currentUrl = window.location.href;
+        var id1 = currentUrl.substring(currentUrl.lastIndexOf('/') + 1);
         window.onload = function () {
             load();
+            
+            test(id1);
         };
     </script>
 </html>
