--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -20px;">
             <img src="main-page-source/button3.png" width="40px"> 모든 가상 objekt</a>
             <br>
-        <p class="white">버전 : 1.2.love</p>
+        <p class="white">버전 : 1.2.love+</p>
     </div>
 
     
@@ -61,7 +61,7 @@
         <div class="objekt_grid">
             <div id="S01"><a href="https://wav-view.netlify.app/marshmallowyoonseoyeon20240111">
                 <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="S01"></a></div>
-            <div id="S02"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S02"><img src="objekt-front-page/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u.png" alt="최근 옵젝이 없어요"></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
 
