--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -124,7 +124,8 @@
         <h2 class="white">--- 901Z ---</h2>
         <div class="objekt_grid">
             <div id="S01"> <img src="SSSsoon.png" alt="최근 옵젝이 없어요"> </div>
-            <div id="S02"><img src="objekt-front-page/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S02"><a href="https://wav-view.netlify.app/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u">
+                <img src="objekt-front-page/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u.png" alt="최근 옵젝이 없어요"></a></div>
             <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
             <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
 
