--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,7 @@
 
                 <li class="white" style="font-size: 35px;">3. 더블 가상 오브젝트<ul style="list-style-type: none;">
                     <li class="green">
-                        <a href="#Double" class="green" style="font-size: 3vh; text-align: left;">1. 908Z / 909Z / 910Z (S09, S15)</a>
+                        <a href="#Double" class="green" style="font-size: 3vh; text-align: left;">1. 908Z / 909Z / 910Z (S07, S09, S10, S15)</a>
                     </li>
                 </li></ul><br>
 
@@ -59,6 +59,8 @@
         <div>
             <h2 class="white">--- 908Z / 909Z / 910Z ---</h2>
             <div id="2024_908Z" class="objekt_grid">
+                <div id="S09"><a href="https://wav-view.netlify.app/socuteNaky20231228evolution908">
+                    <img src="objekt-front-page/socuteNaky20231228evolution908.png" alt="S09"></a></div>
                 <div id="S09"><a href="https://wav-view.netlify.app/bunnykaede231203lovelutionsign">
                     <img src="objekt-front-page/bunnykaede231203lovelutionsign.png" alt="S09"></a></div>
                 <div id="S10"><a href="https://wav-view.netlify.app/ApeachDahyun20231203lovelution">
@@ -67,6 +69,8 @@
                     <img src="objekt-front-page/burger1116lovelutionsignS15908.png" alt="S15"></a></div> 
                 <div id="S09"><a href="https://wav-view.netlify.app/ilovekaede20231203cuteS09noway">
                     <img src="objekt-front-page/ilovekaede20231203cuteS09noway.png" alt="S09"></a></div> 
+                <div id="S10"><a href="https://wav-view.netlify.app/iloveDahyun20231203cuteS10news">
+                    <img src="objekt-front-page/iloveDahyun20231203cuteS10news.png" alt="S10"></a></div> 
                 <div id="S15"><a href="https://wav-view.netlify.app/welovexinyu20231116cuteS15Dove">
                     <img src="objekt-front-page/welovexinyu20231116cuteS15Dove.png" alt="S15"></a></div> 
                 <div id="S15"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
