--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
         <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -20px;">
             <img src="main-page-source/button3.png" width="40px"> 모든 가상 objekt</a>
             <br>
-        <p class="white">버전 : 1.2.love+</p>
+        <p class="white">버전 : 1.2.evol</p>
     </div>
 
     
@@ -73,8 +73,8 @@
 
             <div id="S06"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
 
-            <div id="S07"><a href="https://wav-view.netlify.app/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x">
-                <img src="objekt-front-page/e5vb8yf4ua9zd6wh2sa9zc7xb8yc7x.png" alt="S07"></a></div>
+            <div id="S07"><a href="https://wav-view.netlify.app/socuteNaky20231228evolution908">
+                <img src="objekt-front-page/socuteNaky20231228evolution908.png" alt="S07"></a></div>
 
             <div id="S08"><a href="https://wav-view.netlify.app/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x">
                 <img src="objekt-front-page/e5vb8yi1ri1rd6wh2sd6wg3ta9zc7x.png" alt="S08"></a></div>
