wav 1.2.evol+jiwoo

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,9 @@
             <div id="S02"><a href="https://wav-view.netlify.app/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u">
                 <img src="objekt-front-page/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u.png" alt="S02"></a></div>
                 
-            <div id="S03"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S03"><a href="https://wav-view.netlify.app/d6wj0qj0qg3td6wf4ug3te5vh2se5v">
+                <img src="objekt-front-page/d6wj0qj0qg3td6wf4ug3te5vh2se5v.png" alt="S03"></a></div>
+                
             <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
 
             <div id="S05"><a href="https://wav-view.netlify.app/e5va9zh2sd6wd6wg3td6wd6we5vd6w">
