--- a/public/objekt-view.html
+++ b/public/objekt-view.html
@@ -59,6 +59,8 @@
         <div>
             <h2 class="white">--- 908Z / 909Z / 910Z ---</h2>
             <div id="2024_908Z" class="objekt_grid">
+                <div id="S05"><a href="https://wav-view.netlify.app/Rudolph20231216evolutionS05908">
+                    <img src="objekt-front-page/Rudolph20231216evolutionS05908.png" alt="S05"></a></div>
                 <div id="S07"><a href="https://wav-view.netlify.app/socuteNaky20231228evolution908">
                     <img src="objekt-front-page/socuteNaky20231228evolution908.png" alt="S07"></a></div>
                 <div id="S09"><a href="https://wav-view.netlify.app/bunnykaede231203lovelutionsign">
@@ -98,14 +100,14 @@
             <div id="S01"><a href="https://wav-view.netlify.app/marshmallowyoonseoyeon20240111">
                 <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png" alt="윤서연_마쉬멜로우1"></a></div>
 
-            <div id="S02"><img src="main-page-source/mmysy903.png" alt="윤서연_마쉬멜로우2" onclick="openPopup('helpPopup10')"></div>
+            <div id="S01"><img src="main-page-source/mmysy903.png" alt="윤서연_마쉬멜로우2" onclick="openPopup('helpPopup10')"></div>
             <div id="helpPopup10" class="helpPopup white">
                 <span class="closeButton" onclick="closePopup('helpPopup10')">&times;</span>
                 <h3>Objekt를 보려면 아래 Objekt들의 Grid_key가 필요해요</h3>
                 <img src="objekt-front-page/marshmallowyoonseoyeon20240111.png">
             </div>
             
-            <div id="S02"><img src="main-page-source/S09S152024902.png" alt="S09S152024902" onclick="openPopup('helpPopup11')"></div>
+            <div id="S159"><img src="main-page-source/S09S152024902.png" alt="S09S152024902" onclick="openPopup('helpPopup11')"></div>
             <div id="helpPopup11" class="helpPopup white">
                 <span class="closeButton" onclick="closePopup('helpPopup11')">&times;</span>
                 <h3>Objekt를 보려면 아래 Objekt들의 Grid_key가 필요해요</h3>
@@ -134,7 +136,8 @@
                 <img src="objekt-front-page/d6wj0qf4uh2sd6wf4uc7xj0qj0qf4u.png" alt="S02"></a></div>
             <div id="S03"><a href="https://wav-view.netlify.app/d6wj0qj0qg3td6wf4ug3te5vh2se5v">
                 <img src="objekt-front-page/d6wj0qj0qg3td6wf4ug3te5vh2se5v.png" alt="S03"></a></div>
-            <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S04"><a href="https://wav-view.netlify.app/e5va9zd6we5vd6wf4uj0qi1rg3te5v">
+                <img src="objekt-front-page/e5va9zd6we5vd6wf4uj0qi1rg3te5v.png" alt="S04"></a></div>
 
             <div id="S05"><a href="https://wav-view.netlify.app/e5va9zh2sd6wd6wg3td6wd6we5vd6w">
                 <img src="objekt-front-page/e5va9zh2sd6wd6wg3td6wd6we5vd6w.png" alt="S05"></a></div>
