--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -20px;">
             <img src="main-page-source/button3.png" width="40px"> 모든 가상 objekt</a>
             <br>
-        <p class="white">버전 : 1.2.evol</p>
+        <p class="white">버전 : 1.2.evol+</p>
     </div>
 
     
@@ -68,7 +68,8 @@
             <div id="S03"><a href="https://wav-view.netlify.app/d6wj0qj0qg3td6wf4ug3te5vh2se5v">
                 <img src="objekt-front-page/d6wj0qj0qg3td6wf4ug3te5vh2se5v.png" alt="S03"></a></div>
                 
-            <div id="S04"><img src="SSSsoon.png" alt="최근 옵젝이 없어요"></div>
+            <div id="S04"><a href="https://wav-view.netlify.app/e5va9zd6we5vd6wf4uj0qi1rg3te5v">
+                <img src="objekt-front-page/e5va9zd6we5vd6wf4uj0qi1rg3te5v.png" alt="S04"></a></div>
 
             <div id="S05"><a href="https://wav-view.netlify.app/Rudolph20231216evolutionS05908">
                 <img src="objekt-front-page/Rudolph20231216evolutionS05908.png" alt="S05"></a></div>
