--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,21 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <div id="page-open" style="height: 100vh;">
+        <h1 class="white" style="margin-top: 7vw;">최근 업데이트된 오브젝트 3</h1>
+        <div id="image-container" style="display: inline-block;">
+            <img id="image1" src="objekt-front-page/Rudolph20231216evolutionS05908.png" alt="" width="320px" style="margin-left: auto; margin-right: auto;">
+            <img id="image2" src="objekt-front-page/e5va9zd6we5vd6wf4uj0qi1rg3te5v.png" alt="" width="320px" style="margin-left: auto; margin-right: auto; display: none;">
+            <img id="image3" src="objekt-front-page/socuteNaky20231228evolution908.png" alt="" width="320px" style="margin-left: auto; margin-right: auto; display: none;">
+        </div>
+        <a id="objektLink" href="/Rudolph20231216evolutionS05908" class="white center_display" style="font-size: 30px; margin-top: 10px;">
+            <img src="main-page-source/button1.png" width="40px"> objekt 바로 보러 가기</a>
+    </div>
+
 
     <div id="main" class="search-container" style="height: 100vh;">
         <img src="wav.png" alt="" width="320px" style="margin-top: 15vw">
+
         <form id="searchForm" onsubmit="return searchObject();">
             <h3 class="white">보고 싶은 오브젝트의 id를 입력하세요</h3>
             <input type="text" id="search-input" placeholder="id 입력">
@@ -20,10 +32,10 @@
         <a href="#teaser" class="white center_display" style="font-size: 30px;">
             <img src="main-page-source/button2.png" width="40px"> teaser 보러 가기</a>
             <br>
-        <a href="#recently-title" class="white center_display" style="font-size: 30px; margin-top: -20px;">
+        <a href="#recently-title" class="white center_display" style="font-size: 30px; margin-top: -10px;">
             <img src="main-page-source/button1.png" width="40px"> objekt 보러 가기</a>
             <br>
-        <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -20px;">
+        <a href="/objekt-view" class="white center_display" style="font-size: 30px; margin-top: -10px;">
             <img src="main-page-source/button3.png" width="40px"> 모든 가상 objekt</a>
             <br>
         <p class="white">버전 : 1.2.evol+</p>
@@ -137,6 +149,46 @@
             window.location.href = "/" + objectId;
             event.preventDefault();
         }
+        var currentImage = 1;
+        var imageLinks = [
+            "/Rudolph20231216evolutionS05908", // 첫 번째 이미지에 대한 링크
+            "/e5va9zd6we5vd6wf4uj0qi1rg3te5v", // 두 번째 이미지에 대한 링크
+            "/socuteNaky20231228evolution908"  // 세 번째 이미지에 대한 링크
+        ];
+
+        setInterval(function() {
+            // Hide all images
+            document.getElementById('image1').style.display = 'none';
+            document.getElementById('image2').style.display = 'none';
+            document.getElementById('image3').style.display = 'none';
+
+            // Show the next image
+            currentImage = (currentImage % 3) + 1;
+            document.getElementById('image' + currentImage).style.display = 'block';
+
+            document.getElementById('objektLink').setAttribute('href', imageLinks[currentImage - 1]);
+        }, 3000);
+
+        // IntersectionObserver를 사용하여 #page-open이 화면에 보일 때마다 9초 뒤에 #main으로 스크롤
+        var pageOpenElement = document.getElementById('page-open');
+        var mainElement = document.getElementById('main');
+
+        var observer = new IntersectionObserver(function (entries) {
+            entries.forEach(function (entry) {
+                // entry.isIntersecting은 요소가 화면에 보일 때 true를 반환합니다.
+                
+                if (entry.isIntersecting && entry.intersectionRatio >= 0.5) {
+                    // 9초 이상 보일 때 #main으로 스크롤
+                    setTimeout(function () {
+                        mainElement.scrollIntoView({ behavior: "smooth" });
+                    }, 9000);
+                    observer.disconnect();
+                }
+            });
+        }, { threshold: 0.5 });
+
+        // #page-open 요소를 감시
+        observer.observe(pageOpenElement);
     </script>
     
 </html>
